GENERATED_ITEMS =	\
	libgioopenssl.vcxproj			\
	libgioopenssl.vcxproj.filters		\
	tlsbase.vcxproj				\
	tlsbase.vcxproj.filters

EXTRA_DIST =	\
	glib-openssl.sln			\
	glib-openssl-build-defines.props	\
	glib-openssl-gen-srcs.props		\
	glib-openssl-install.props		\
	glib-openssl-version-paths.props	\
	glib-openssl-install.vcxproj		\
	glib-openssl-prepbuild.vcxproj	\
	libgioopenssl.vcxprojin			\
	libgioopenssl.vcxproj.filtersin		\
	tlsbase.vcxprojin			\
	tlsbase.vcxproj.filtersin		\
	$(GENERATED_ITEMS)

DISTCLEANFILES = $(GENERATED_ITEMS)
